# dayz-shop-backend

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 5ae0746489b3_initial.py  5fba2527d5ec_initial.py  75270062b0cb_initial.py
builds/: auth.dockerfile  service.dockerfile
deploy/: Dockerfile  docker-compose.yaml
old/deploy/: docker-compose.yaml
old/src/: config.py  database.py  main.py
old/src/api/: dependencies.py  exception.py  types.py
old/src/api/crud/: repository.py
old/src/api/crud/routers/: category.py  order.py  product.py
old/src/api/shared/repositories/: order.py  product.py
old/src/api/shop/models/: order.py
old/src/api/shop/routers/: __init__.py~  order.py
old/src/api/shop/schemas/: category.py  order.py  product.py
scripts/: generate-keys.sh
services/auth/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/auth/certs/: README.md  jwt-private.pem  jwt-public.pem
services/auth/src/: config.py  main.py
services/auth/src/adapters/database/: __init__.py  models.py  repository.py  session.py
services/auth/src/api/rest/: __init__.py  handlers.py  requests.py  responses.py
services/auth/src/core/: depends.py  enums.py  errors.py
services/auth/src/core/jwk/: __init__.py  tokens.py
services/auth/src/core/jwt/: __init__.py  decoder.py  encoder.py  tokens.py
services/auth/src/migrations/: env.py
services/auth/src/migrations/versions/: 6cfae33da497_initial.py
services/auth/tests/core/jwk/: test_jwk_tokens.py
services/auth/tests/core/jwt/: conftest.py  test_decoder.py  test_encoder.py  test_jwt_tokens.py  test_tokens.py
services/gateway/: pyproject.toml
services/gateway/src/: config.py  main.py
services/gateway/src/adapters/database/: __init__.py  models.py  session.py
services/gateway/src/api/rest/: __init__.py
services/gateway/src/api/rest/handlers/: __init__.py  auth.py
services/gateway/src/core/: depends.py  errors.py  utils.py
services/gateway/src/core/jwk/: __init__.py  decoder.py  fetcher.py
services/gateway/src/core/jwt/: __init__.py  decoder.py
services/gateway/src/core/requests/: __init__.py  http.py
services/gateway/src/core/steam/: __init__.py  service.py
services/users/: pyproject.toml
services/users/src/: config.py  main.py
services/users/src/adapters/database/: __init__.py  models.py  repository.py  session.py
services/users/src/api/rest/: __init__.py  handlers.py
services/users/src/core/: depends.py  errors.py
src/: config.py  database.py  decorators.py  main.py  params.py  schemas.py
src/api/: __init__.py  utils.py
src/api/crud/: __init__.py  repository.py  schema.py  schemas.py
src/api/crud/repositories/: __init__.py  product.py
src/api/crud/routers/: __init__.py  category.py  order.py  order.py~  product.py  product.py~
src/api/shared/: __init__.py
src/api/shared/repositories/: __init__.py  category.py  order.py  product.py
src/api/shop/models/: __init__.py  category.py  order.py  product.py  product.py~
src/api/shop/repositories/: __init__.py  category.py  product.py
src/api/shop/routers/: __init__.py  category.py  order.py  product.py
src/api/shop/schemas/: __init__.py  category.py  order.py  product.py  product.py~
src/auth/: Dockerfile  app.py  main.py  requirements.txt
src/auth/app/: config.py  dto.py  errors.py
src/auth/app/modules/: __init__.py
src/auth/app/modules/jwt/: __init__.py  decoder.py  encoder.py  tokens.py
src/auth/app/modules/steam/: __init__.py  service.py
src/auth/app/transport/: __init__.py  handlers.py  requests.py  responses.py
src/auth/certs/: README.md
src/auth/service/: __init__.py  exceptions.py  routers.py  schemas.py
src/auth/service/services/: __init__.py  steam.py
src/core/: config.py  database.py
src/core/crud/: __init__.py  repository.py  schemas.py
src/core/utils/: __init__.py  shop.py  utils.py
src/crud/: __init__.py  repository.py  schemas.py
src/gateway/: Dockerfile  app.py  main.py  requirements.txt
src/gateway/app/: deps.py  dto.py
src/gateway/app/modules/: __init__.py
src/gateway/app/modules/services/: __init__.py  utils.py
src/gateway/app/transport/: __init__.py
src/gateway/app/transport/handlers/: auth.py
src/gateway/service/: __init__.py  routers.py  services.py
src/shared/: setup.py
src/shared/dto/: __init__.py
src/shared/transport/: __init__.py  handlers.py
src/shop/models/: __init__.py  product.py
src/shop/repositories/: __init__.py  product.py
src/shop/routers/: __init__.py  product.py
src/shop/schemas/: __init__.py  product.py
src/utils/: __init__.py  shop.py
tests/auth/app/modules/jwt/: conftest.py  (+2 more)
(+4 files in other folders)
