[tool.poetry]
name = "dayz-shop-backend"
description = "DayZ In-Game Shop"
authors = ["hurfy <hurfydev+dzshop@gmail.com>"]
version = "0.1.0"
license = "MIT"
readme = "README.md"
package-mode = false


[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"
pyjwt = "^2.10.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
sqlalchemy = "^2.0.38"
uvicorn = "^0.34.0"
ruff = "^0.9.6"
cryptography = "^44.0.1"
asyncpg = "^0.30.0"
pytest-mock = "^3.14.0"
redis = "^5.2.1"
alembic = "^1.15.2"


[tool.poetry.dependencies]
python = ">=3.12"
dzshop = {path = "packages/dzshop"}


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [
  "src"
]
asyncio_default_fixture_loop_scope = "session"


[tool.black]
line-length = 100


[tool.ruff]
line-length = 120
indent-width = 4

src = ["src"]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".idea",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "D102",  # docstring in public method
    "D103",  # docstring in public function
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.ruff.format]
quote-style = "double"
