[tool.poetry]
name = "gateway"
description = "gateway-service"
authors = ["hurfy <hurfydev+dzshop@gmail.com>"]
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.12"
dzshop = { path = "../../packages/dzshop", develop = true }


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
